--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "classnames": "^2.3.2",
     "jodit-react": "^1.3.36",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-hook-form": "^7.43.1",
+    "react-router-dom": "^6.8.1",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
